# pypilot-syslib

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: ci.yml
examples/arduino/SyslibLoggingExample/: SyslibLoggingExample.ino
examples/linux/: logging_example.cpp
src/: pypilot_syslib.hpp
src/pypilot_syslib/: logging.hpp  logging_sinks.hpp
tests/: test_logging.cpp  test_logging_sinks.cpp
